:green_heart: Fix: CI submodule-update

--- a/.github/workflows/submodule-update.yml
+++ b/.github/workflows/submodule-update.yml
@@ -4,7 +4,7 @@ on:
     push:
         branches: main
     schedule:
-        - cron: "0 3 * * *" # 한국 기준 오후 12시
+        - cron: "50 2 * * *" # 한국 기준 오후 11시 50분
 
 jobs:
     update:
