--- a/src/Makefile
+++ b/src/Makefile
@@ -6,7 +6,7 @@
 #    By: jgo <jgo@student.42seoul.fr>               +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/11/23 13:42:33 by jgo               #+#    #+#              #
-#    Updated: 2023/05/14 09:50:28 by jgo              ###   ########.fr        #
+#    Updated: 2023/06/06 14:59:41 by jgo              ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,18 +14,18 @@ ifndef TOPDIR
 		TOPDIR = $(abspath ../)
 endif
 
-include $(TOPDIR)/make_config/Rules.mk
-include $(TOPDIR)/make_config/color_rules.mk
+include $(TOPDIR)/make_config/src/Rules.mk
+include $(TOPDIR)/make_config/com/ColorRules.mk
 
 bonus :
 	$(MAKE) TOPDIR=$(TOPDIR) -C $(BONUS_DIR) $@
 
-all : 
+all :
 	$(MAKE) TOPDIR=$(TOPDIR) -C $(MANDATORY_DIR) $@
 
 clean fclean :
 	$(MAKE) TOPDIR=$(TOPDIR) -C $(MANDATORY_DIR) $@
-# $(MAKE) TOPDIR=$(TOPDIR) -C $(BONUS_DIR) $@
+	$(MAKE) TOPDIR=$(TOPDIR) -C $(BONUS_DIR) $@
 
 re : fclean
 	$(MAKE) TOPDIR=$(TOPDIR) -C $(MANDATORY_DIR)
