--- a/src/checker/Makefile
+++ b/src/checker/Makefile
@@ -6,7 +6,7 @@
 #    By: jgo <jgo@student.42seoul.fr>               +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/11/23 14:05:59 by jgo               #+#    #+#              #
-#    Updated: 2023/05/14 10:30:20 by jgo              ###   ########.fr        #
+#    Updated: 2023/06/06 14:35:11 by jgo              ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,10 +14,10 @@ ifndef TOPDIR
 		TOPDIR = $(abspath ../../)
 endif
 
-include $(TOPDIR)/make_config/Rules.mk
-include $(TOPDIR)/make_config/color_rules.mk
+include $(TOPDIR)/make_config/src/Rules.mk
+include $(TOPDIR)/make_config/com/ColorRules.mk
 
-NAME = $(PROJECT_NAME)
+NAME = $(join $(BONUS_NAME), _bonus)
 
 DIRS = commands_bonus dequeue_bonus utils_bonus
 LIBS = $(addsuffix .a, $(addprefix lib/, $(DIRS)))
@@ -30,29 +30,4 @@ OBJS = $(SRCS:.c=.o)
 DEPS = $(SRCS:.c=.d)
 -include $(DEPS)
 
-all bonus :
-	$(Q)$(foreach dir, $(DIRS), $(MAKE) TOPDIR=$(TOPDIR) -C $(dir) $@;)
-	$(Q)$(call color_printf,$(YELLOW),$(NAME),🎯 Start compiling)
-	$(MAKE) $(NAME)
-	$(Q)$(call color_printf,$(GREEN),$(NAME),✨ compiled!)
-
-$(NAME): $(OBJS) $(LIBS)
-	$(MAKE) files="$(HEADS)" src_dir=`pwd`/includes dst_dir=$(TOPDIR)/includes link_files
-	$(LINK.o) $^ $(LOADLIBES) $(LDLIBS) -o $@
-	$(MAKE) files="$(NAME)" src_dir=`pwd` dst_dir=$(TOPDIR) link_files
-	
-clean:
-	$(Q)$(foreach dir, $(DIRS), $(MAKE) TOPDIR=$(TOPDIR) -C $(dir) $@;)
-	$(MAKE) files="$(HEADS)" src_dir=`pwd` dst_dir=$(TOPDIR)/includes unlink_files
-	$(RM) $(DEPS) $(OBJS)
-
-fclean: clean
-	$(Q)$(foreach dir, $(DIRS), $(MAKE) TOPDIR=$(TOPDIR) -C $(dir) $@;)
-	$(MAKE) files="$(NAME)" src_dir=`pwd` dst_dir=$(TOPDIR) unlink_files
-	$(RM) $(NAME)
-
-re: fclean
-	$(Q)$(foreach dir, $(DIRS), $(MAKE) TOPDIR=$(TOPDIR) -C $(dir) $@;)
-	$(MAKE)
-
-.PHONY: all clean fclean re bonus
+include $(TOPDIR)/make_config/src/Recipes.mk
