--- a/src/push_swap/sort/Makefile
+++ b/src/push_swap/sort/Makefile
@@ -6,7 +6,7 @@
 #    By: jgo <jgo@student.42seoul.fr>               +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/01/05 08:31:25 by jgo               #+#    #+#              #
-#    Updated: 2023/06/06 14:15:14 by jgo              ###   ########.fr        #
+#    Updated: 2023/06/06 15:30:32 by jgo              ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -31,26 +31,4 @@ OBJS = $(SRCS:.c=.o)
 DEPS = $(SRCS:.c=.d)
 -include $(DEPS)
 
-all bonus :
-	$(Q)$(call color_printf,$(CYAN),$(NAME),🎯 starting compile $(NAME))
-	$(Q)$(MAKE) $(NAME)
-	$(Q)$(call color_printf,$(GREEN),$(NAME),🔰 done!)
-
-$(NAME): $(OBJS)
-	$(Q)$(call color_printf,$(GREEN),$(NAME),📚 archive object)
-	$(AR) $(ARFLAGS) $@ $^
-	$(Q)$(MAKE) files="$(NAME)" src_dir=`pwd` dst_dir=$(TOPDIR)/$(MANDATORY_LIB_DIR) link_files
-
-clean:
-	$(Q)$(MAKE) files="$(NAME)" src_dir=`pwd` dst_dir=$(TOPDIR)/$(MANDATORY_LIB_DIR) unlink_files
-	$(Q)$(call color_printf,$(RED),$(NAME),🗑️  remove Objects && Dependency file)
-	$(RM) $(OBJS) $(DEPS)
-
-fclean: clean
-		$(Q)$(call color_printf,$(RED),$(NAME),🗑️  remove $(NAME))
-		$(RM) $(NAME)
-
-re : fclean
-	$(MAKE) all
-
-.PHONY: all clean fclean re bonus
+include $(TOPDIR)/make_config/src/SubLibsRecipes.mk
